feat(bff): redirect post-login al frontend, timeouts en WebClient, favicon estatico y tipos de contenido en uploads